--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
   <!-- PRAWA STRONA -->
   <section class="right">
 
-    <div class="card">
-      <div id="clock">00:00:00</div>
-      <div id="date"></div>
-      <div id="nameday"></div>
-    </div>
+   <div class="card">
+  <div id="clock">00:00:00</div>
+  <div id="date"></div>
+  <div id="nameday"></div>
+  <div id="sun"></div>
+</div>
+
 
     <div class="card">
       <h2>Pogoda</h2>
@@ -81,14 +83,11 @@
   </section>
 
 </main>
-
-<script src="clock.js"></script>
-<script src="namedays.js"></script>
+<script src="js/info.js"></script>
 <script src="weather.js"></script>
 <script src="canvas.js"></script>
 <script>
   feather.replace();
 </script>
-
-</body>
+ </body>
 </html>
